# C-High-Performance-for-Financial-Systems-

./: README.md
Code screenshots/: Readme.md
chapter03/: CMakeLists.txt  exploring_binary_tree.hpp  exploring_circular_array.hpp  exploring_hash_table.hpp  exploring_linked_list.hpp  exploring_queue.hpp  lockfree_limitorderbook.hpp  main.cpp  market_data_feed.hpp  messaging_hub.hpp  oms_ems.hpp  rms.hpp  smartblocking_limitorderbook.hpp  strategy.hpp  synchronized_limitorderbook.hpp
chapter03/tests/: exploring_circular_array_test.hpp
chapter04/: RMS.cpp  SOR.cpp
chapter06/: CMakeLists.txt  branch_prediction_examples.hpp  cache_line_aligned.hpp  data_locality_example.hpp  false_sharing.hpp  loop_unrolling_and_tilling_example.hpp  main.cpp  prefetching_data.hpp  warmup_example.hpp
